Reestructuración de las pantallas javascript, metido requirejs y control de sesion para que cuando se pierda se redirija al login. También hecha la búsqueda, alta y retrieve de pacientes.

--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/3dSimulation.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/3dSimulation.html
@@ -14,9 +14,9 @@
 		
         <script type="text/javascript" src='../js/3d/surface-plot.js'></script>
         <script type="text/javascript" src='../js/3d/colour-gradient.js'></script>
-        <script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
-        <script type="text/javascript" src='../js/jquery.mobile-1.4.1.js'></script>
         <script type="text/javascript" src="../js/3d/jsapi"></script>
+        <script type="text/javascript" src='../js/jquery/jquery-1.9.1.min.js'></script>
+        <script type="text/javascript" src='../js/jquery/jquery.mobile-1.4.1.js'></script>
         
         <style>
         	body.landscape { text-align:center; margin: 0; padding: 0;}
