--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/home.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/home.html
@@ -11,26 +11,20 @@
 		<link rel="stylesheet" href="../css/themes/jquery.mobile.icons.min.css" />
 		<link rel="stylesheet" href="../css/jquery.mobile.structure-1.4.2.min.css" />
 		
-		<script type="text/javascript" src="../cordova.js"></script>
-		<script type="text/javascript" src="../index.js"></script>		
-		<script type="text/javascript" src="../js/ctrl.generic.js"></script>
-		<script type="text/javascript" src="../js/server.js"></script>
-		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
-		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.js'></script>	
-		
-		<script type="text/javascript">
-			generic.initialize();
-		</script>
+		<script data-main="../js/pages/home" src="../js/require.min.js"></script>
 	</head>
 
 	<body>
 		<div data-role="page" id="page1">
 			<!-- Cabecera -->
-			<div data-role="header" >                    
+			<div data-role="header">
 				<h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
 				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
-					<h2 class="subtitle">Men&uacute; principal</h2>
-					<div id="username" class="username"></div>
+					<h2 id="subtitle" class="subtitle">Men&uacute; principal</h2>
+					<div class="username">
+						<div id="username"></div>
+						<a href="#" onclick="javascript:generic.unlogin();" data-icon="power" data-role="button" data-iconpos="notext" data-mini="true">Salir</a>
+					</div>
 				</div>
 			</div>
 			
