--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
@@ -10,16 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/themes/jquery.mobile.icons.min.css" />
 		<link rel="stylesheet" type="text/css" href="../css/jquery.mobile.structure-1.4.2.min.css" />
 		
-		<script type="text/javascript" src="../cordova.js"></script>
-		<script type="text/javascript" src="../index.js"></script>		
-		<script type="text/javascript" src="../js/ctrl.generic.js"></script>
-		<script type="text/javascript" src="../js/server.js"></script>	
-		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
-		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.js'></script>			
-		<script type="text/javascript" src='../js/pages/login.js'></script>	
-		<script type="text/javascript">
-			generic.initialize();
-		</script>
+		<script data-main="../js/pages/login" src="../js/require.min.js"></script>
 	</head>
 
 	<body>
