--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/longitud_miembros_infe.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/longitud_miembros_infe.html
@@ -14,8 +14,8 @@
 		<script type="text/javascript" src="../index.js"></script>		
 		<script type="text/javascript" src="../js/ctrl.generic.js"></script>
 		<script type="text/javascript" src="../js/server.js"></script>			
-		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
-		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.js'></script>	
+		<script type="text/javascript" src='../js/jquery/jquery-1.9.1.min.js'></script>
+		<script type="text/javascript" src='../js/jquery/jquery.mobile-1.4.1.js'></script>	
 		<script type="text/javascript" src="../js/pages/longitud_miembros_infe.js"></script>
 		
 		<script type="text/javascript">
