--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/video_detalle.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/video_detalle.html
@@ -15,9 +15,10 @@
 		<script type="text/javascript" src="../index.js"></script>
 		<script type="text/javascript" src='../js/server.js'></script>
 		<script type="text/javascript" src="../js/ctrl.generic.js"></script>
-		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
-		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.min.js'></script>		
-		<script type="text/javascript" src="../js/video.js"></script>
+		<script type="text/javascript" src='../js/jquery/jquery-1.9.1.min.js'></script>
+		<script type="text/javascript" src='../js/jquery/jquery.mobile-1.4.1.min.js'></script>
+		<script type="text/javascript" src="../js/jquery/jquery.video-4.3.0.js"></script>		
+		<script type="text/javascript" src="../js/pages/video.js"></script>
 				
 		<script type="text/javascript">
 			generic.initialize(video.recuperar);
