--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/paciente.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/paciente.html
@@ -61,18 +61,18 @@
 					<div data-role="fieldcontain">
 						<label for="cmbSexo">Sexo</label>
 						<select id="cmbSexo" name="cmbSexo" data-role="slider" style="width: 170px">
-							<option value="HOMBRE">Hombre</option>
-							<option value="MUJER">Mujer</option>
+							<option value="0">Hombre</option>
+							<option value="1">Mujer</option>
 						</select>
 					</div>
 				
 					<div data-role="fieldcontain">
 						<label for="cmbEscolarizacion">Escolarizaci&oacute;n:</label>
 						<select id="cmbEscolarizacion" name="cmbEscolarizacion" data-native-menu="false">
-							<option value="0"></option>
-							<option value="EDUCACION_ESPECIAL">Educaci&oacute;n especial</option>
-							<option value="INTEGRACION">Integraci&oacute;n</option>
-							<option value="SIN_ADAPTACIONES">Sin adaptaciones</option>		                    
+							<option value="-1"></option>
+							<option value="0">Educaci&oacute;n especial</option>
+							<option value="1">Integraci&oacute;n</option>
+							<option value="2">Sin adaptaciones</option>		                    
 						</select>		            
 					</div>
 					
