Dos nuevos documentos subidos : Acta de reunión del 25/04/2014 y listado de solicitudes de cambios para ir recopilando todos. En el código, se ha metido en todas las pantallas el popup de unlogin para confirmar si quieres salir de la aplicación.

--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/analisis_marcha.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/analisis_marcha.html
@@ -35,7 +35,17 @@
 					<h2 id="subtitle" class="subtitle">An&aacute;lisis Observacional de la Marcha</h2>
 					<div class="username">
 						<div id="username"></div>
-						<a href="#" onclick="javascript:generic.unlogin();" data-icon="power" data-role="button" data-iconpos="notext" data-mini="true">Salir</a>
+						<a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="power" data-iconpos="notext" data-mini="true">Salir</a>
+						<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
+							<div data-role="header" data-theme="a" class="ui-corner-top">
+								<h1>Logout</h1>
+							</div>
+							<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content" style="text-align:center">
+								<h3 class="ui-title">¿Est&aacute; seguro que desea salir de la aplicaci&oacute;n?</h3>
+								<a href="#" data-role="button" data-inline="true" data-rel="back">No</a>    
+								<a href="#" onclick="javascript:generic.unlogin();" data-role="button" data-inline="true">Si</a>  
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
