--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/val_articular_muscular.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/val_articular_muscular.html
@@ -33,7 +33,20 @@
 			
 			<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
 				<h2 class="subtitle">Valoraci&oacute;n Articular y Muscular</h2>
-				<div id="username" class="username"></div>
+				<div class="username">
+					<div id="username"></div>
+					<a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="power" data-iconpos="notext" data-mini="true">Salir</a>
+					<div data-role="popup" id="popupDialog" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
+						<div data-role="header" data-theme="a" class="ui-corner-top">
+							<h1>Logout</h1>
+						</div>
+						<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content" style="text-align:center">
+							<h3 class="ui-title">¿Est&aacute; seguro que desea salir de la aplicaci&oacute;n?</h3>
+							<a href="#" data-role="button" data-inline="true" data-rel="back">No</a>    
+							<a href="#" onclick="javascript:generic.unlogin();" data-role="button" data-inline="true">Si</a>  
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		
