--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/exploracion_fisica.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/exploracion_fisica.html
@@ -24,7 +24,7 @@
 		        <h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
 		        <div class="ui-btn-right" data-role="controlgroup" data-type="horizontal">
 		            <a href="#" data-icon="delete" data-role="button" onclick="javascript:evaluacion_muscular_manual.server()" >Cancelar</a>
-		            <a href="#" data-icon="check" data-role="button" onclick="javascript:exploracionFisica.insertar()" >Guardar</a>
+		            <a href="#" data-icon="check" data-role="button" onclick="javascript:exploracionFisica.insertar()" id="btnGuardar">Guardar</a>
 		        </div>
 		        
 		        <div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
