Terminada la pantalla Gross Motor Function Classification System

--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/exploracion_fisica.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/exploracion_fisica.html
@@ -122,7 +122,7 @@
 					<div data-role="fieldcontain">
 						<ul data-role="listview" data-inset="true" data-filter="false">						
 							<li><a data-transition="slidedown" rel="external" href="#" onclick="javascript:exploracionFisica.irAPaginaAuxiliarDeExploracion('gross_motor_function.html');">Gross Motor Function Classification System</a></li>
-							<li><a data-transition="slidedown" rel="external" href="#" onclick="javascript:exploracionFisica.irAPaginaAuxiliarDeExploracion('paciente_busqueda.html');">Articular / muscular</a></li>                       
+							<li><a data-transition="slidedown" rel="external" href="#" onclick="javascript:exploracionFisica.irAPaginaAuxiliarDeExploracion('val_articular_muscular.html');">Articular / muscular</a></li>                       
 						</ul>						  									
 					</div>						
 				</div>	
