Terminada la pantalla de valoracion articular muscular, retocada la de graficas para que funcionen los point labels y captura de pantallas que faltaban

--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_detalle.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_detalle.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/themes/jquery.mobile.icons.min.css" />
 		<link rel="stylesheet" type="text/css" href="../css/jquery.mobile.structure-1.4.2.min.css" />
 		<link rel="stylesheet" type="text/css" type="text/css" href="../css/jquery.jqplot.min.css" />
-		
+
 		<script data-main="../js/pages/grafica" src="../js/require.min.js"></script>
 	</head>
 	<body>
@@ -24,7 +24,7 @@
 		        <h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
 				
 				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
-					<h2 class="subtitle">Gr&aacute;fica de fichero EMT</h2>
+					<h2 id="subtitle" class="subtitle">Gr&aacute;fica de fichero EMT</h2>
 					<div class="username">
 						<div id="username"></div>
 						<a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="power" data-iconpos="notext" data-mini="true">Salir</a>
