--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/paciente_busqueda.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/paciente_busqueda.html
@@ -21,7 +21,7 @@
 				<a data-rel="back" data-icon="back">Volver</a>
 				
 				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
-					<h2 class="subtitle">B&uacute;squeda de Pacientes</h2>
+					<h2 id="subtitle" class="subtitle">B&uacute;squeda de Pacientes</h2>
 					<div class="username">
 						<div id="username"></div>
 						<a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="power" data-iconpos="notext" data-mini="true">Salir</a>
