--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/recordar_contrasenna.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/recordar_contrasenna.html
@@ -21,7 +21,7 @@
 				<a data-rel="back" data-icon="back">Volver</a>
 				
 				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
-					<h2 class="subtitle">Recordar Contrase&ntilde;a</h2>
+					<h2 id="subtitle" class="subtitle">Recordar Contrase&ntilde;a</h2>
 				</div>
 			</div>
 			
