--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/val_articular_muscular.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/val_articular_muscular.html
@@ -10,29 +10,24 @@
 		<link rel="stylesheet" href="../css/themes/jquery.mobile.icons.min.css" />
 		<link rel="stylesheet" href="../css/jquery.mobile.structure-1.4.2.min.css" />	
 		
-		<script type="text/javascript" src="../cordova.js"></script>
-		<script type="text/javascript" src="../index.js"></script>		
-		<script type="text/javascript" src="../js/ctrl.generic.js"></script>
-		<script type="text/javascript" src="../js/server.js"></script>
-		<script type="text/javascript" src='../js/jquery/jquery-1.9.1.min.js'></script>
-		<script type="text/javascript" src='../js/jquery/jquery.mobile-1.4.1.js'></script>	
-		<script type="text/javascript" src="../js/pages/val_articular_muscular.js"></script>
-		
-		<script type="text/javascript">
-			generic.initialize();
-		</script>
+		<script data-main="../js/pages/val_articular_muscular" src="../js/require.min.js"></script>
 	</head>
 <body>
 
 	<div data-role="page" data-theme="a">
 		<!-- Cabecera -->
 		<div data-role="header">
-			<h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
-			<a data-rel="back" data-icon="back">Volver</a>
-			<a data-icon="check" onclick="javascript:evaluacion_muscular_manual.server()" >Guardar</a>
+			<div class="ui-btn-left" data-role="controlgroup" data-type="horizontal">
+	            <a data-rel="back" data-role="button" data-icon="back">Volver</a>
+	      		<a data-icon="home" data-role="button" href="#" onclick="javascript:generic.changePage('home.html');">Inicio</a>
+	        </div>
+	        <h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
+			<div class="ui-btn-right" data-role="controlgroup" data-type="horizontal">
+	            <a href="#" data-icon="check" data-role="button" onclick="javascript:valoracionArticularMuscular.insertar()" id="btnGuardar">Guardar</a>
+	        </div>
 			
 			<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
-				<h2 class="subtitle">Valoraci&oacute;n Articular y Muscular</h2>
+				<h2 id="subtitle" class="subtitle">Valoraci&oacute;n Articular y Muscular</h2>
 				<div class="username">
 					<div id="username"></div>
 					<a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="power" data-iconpos="notext" data-mini="true">Salir</a>
@@ -53,9 +48,12 @@
 		<!-- Contenido -->
 		<div data-role="content"> 	
 			<div class="content2">
+				<input type="hidden" id="idPaciente" />
+				<input type="hidden" id="idExploracion" />
+				<input type="hidden" id="idValoracion" />
 				<form method="post" action="">
-				 <table data-role="table" id="movie-table" data-mode="reflow" class="ui-responsive table-stroke">
-					  <thead>
+				<table data-role="table" id="movie-table" data-mode="reflow" class="ui-responsive table-stroke">
+					<thead>
 						<tr>
 						  <th data-priority="1">Articulaci&oacute;n</th>
 						  <th data-priority="persist">Movimiento</th>
@@ -96,142 +94,141 @@
 						<tr>
 						  <td><b>Cadera</b></td>
 						  <td>Flexi&oacute;n</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  
+						  <td><input type="text" class="txt-speech" id="var_1_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_1_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_1_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_1_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_1_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_1_6" /></td>
 						</tr>
 						<tr>
 						  <td></td>
 						  <td>Extensi&oacute;n</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_2_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_2_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_2_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_2_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_2_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_2_6" /></td>
 						</tr>
 						<tr>
 						  <td></td>
 						  <td>Abducci&oacute;n (cadera flex)</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_3_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_3_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_3_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_3_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_3_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_3_6" /></td>
 						</tr>					
 	
 						<tr>
 						  <td></td>
 						  <td>Abducci&oacute;n (cadera ext)</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_4_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_4_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_4_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_4_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_4_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_4_6" /></td>
 						</tr>					
 						<tr>
 						  <td></td>
 						  <td>Rotaci&oacute;n Int</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_5_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_5_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_5_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_5_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_5_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_5_6" /></td>
 						</tr>					
 	
 						<tr>
 						  <td></td>
 						  <td>Rotaci&oacute;n ext</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_6_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_6_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_6_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_6_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_6_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_6_6" /></td>
 						</tr>					
 	
 						<tr>
 						  <td><b>Rodilla</b></td>
 						  <td>Flexi&oacute;n</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_7_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_7_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_7_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_7_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_7_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_7_6" /></td>
 						</tr>
 	
 						<tr>
 						  <td></td>
 						  <td>Extensi&oacute;n</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					 
+						  <td><input type="text" class="txt-speech" id="var_8_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_8_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_8_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_8_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_8_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_8_6" /></td>
 						</tr>	
 	
 						<tr>
 						  <td><b>Tobillo</b></td>
 						  <td>Flex plantar</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_9_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_9_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_9_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_9_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_9_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_9_6" /></td>
 						</tr>
 	
 						<tr>
 						  <td></td>
 						  <td>Flex dorsal (rodilla ext)</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_10_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_10_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_10_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_10_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_10_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_10_6" /></td>
 						</tr>	
 	
 						<tr>
 						  <td></td>
 						  <td>Flex dorsal (rodilla 90&deg;)</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_11_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_11_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_11_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_11_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_11_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_11_6" /></td>
 						</tr>	
 	
 						<tr>
 						  <td></td>
 						  <td>Inversi&oacute;n</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_12_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_12_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_12_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_12_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_12_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_12_6" /></td>
 						</tr>	
 	
 						<tr>
 						  <td></td>
 						  <td>Eversi&oacute;n</td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
-						  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
+						  <td><input type="text" class="txt-speech" id="var_13_1" /></td>
+						  <td><input type="text" class="txt-speech" id="var_13_2" /></td>
+						  <td><input type="text" class="txt-speech" id="var_13_3" /></td>
+						  <td><input type="text" class="txt-speech" id="var_13_4" /></td>
+						  <td><input type="text" class="txt-speech" id="var_13_5" /></td>
+						  <td><input type="text" class="txt-speech" id="var_13_6" /></td>
 						</tr>						
 					  </tbody>
 				</table>			
