--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/antecedentes_relacionados_PCI.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/antecedentes_relacionados_PCI.html
@@ -27,7 +27,7 @@
 		        </div>
 		        
 		        <div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
-					<h2 id="subtitle" class="subtitle">Antecedentes relacionados con PCI</h2>
+					<h2 id="subtitle" class="subtitle">Nuevos Antecedentes relacionados con PCI</h2>
 					<div class="username">
 						<div id="username"></div>
 						<a href="#popupDialog" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-icon="power" data-iconpos="notext" data-mini="true">Salir</a>
