Correccion de incidencias

--- a/client-app/androidApp/platforms/android/assets/www/pages/paciente.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/paciente.html
@@ -73,7 +73,7 @@
 						
 					<div data-role="fieldcontain">
 						<label for="txtFechaNacimiento">Fecha de nacimiento:</label>
-						<input id="txtFechaNacimiento" name="txtFechaNacimiento" class="txt-date" placeholder="dd/mm/yyyy" />
+						<input type="date" id="txtFechaNacimiento" name="txtFechaNacimiento" class="txt-date" placeholder="dd/mm/yyyy" />
 					</div>
 					
 					<div data-role="fieldcontain">
