--- a/client-app/androidApp/platforms/android/assets/www/pages/antecedentes_personales.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/antecedentes_personales.html
@@ -201,13 +201,13 @@
 					<div data-role="fieldcontain">  				
 						<label for="localizacionTratamiento">Localizaci&oacute;n del tratamiento</label>				
 						<select name="localizacionTratamiento" id="localizacionTratamiento" data-native-menu="false">    
-							<option value="1">Músculo 1</option>
-							<option value="2">Músculo 2</option>
-							<option value="3">Músculo 3</option>
-							<option value="4">Músculo 4</option>
-							<option value="5">Músculo 5</option>
-							<option value="6">Músculo 6</option>
-							<option value="7">Músculo 7</option>
+							<option value="1">M&uacute;sculo 1</option>
+							<option value="2">M&uacute;sculo 2</option>
+							<option value="3">M&uacute;sculo 3</option>
+							<option value="4">M&uacute;sculo 4</option>
+							<option value="5">M&uacute;sculo 5</option>
+							<option value="6">M&uacute;sculo 6</option>
+							<option value="7">M&uacute;sculo 7</option>
 						</select>
 					</div>
 					
